fixed header (issue on ios)

--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -26,7 +26,7 @@
 	}
 
 	.headerWrap {
-		position: relative;
+		//position: relative;
 	}
 
 	.mainHead {
